update libraries / gradle * activity = "1.9.1" * fragment = "1.8.2" * transition = "1.5.1"

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,12 @@
 [versions]
-agp = "8.5.0"
+agp = "8.5.1"
 kotlin = "1.9.24"
 coreKtx = "1.13.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-activity = "1.9.0"
-fragment = "1.8.1"
+activity = "1.9.1"
+fragment = "1.8.2"
+transition = "1.5.1"
 navigation = "2.7.7"
 constraintlayout = "2.1.4"
 
@@ -19,6 +20,7 @@ androidx-navigation = { group = "androidx.navigation", name = "navigation-runtim
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-transition = { group = "androidx.transition", name = "transition", version.ref = "transition" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
