--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-agp = "8.5.1"
+agp = "8.6.0"
 kotlin = "1.9.24"
 coreKtx = "1.13.1"
 appcompat = "1.7.0"
-material = "1.12.0"
-activity = "1.9.1"
-fragment = "1.8.2"
+material = "1.13.0-alpha05"
+activity = "1.9.2"
+fragment = "1.8.3"
 transition = "1.5.1"
-navigation = "2.7.7"
+navigation = "2.8.0"
 constraintlayout = "2.1.4"
 
 [libraries]
