--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 agp = "8.6.0"
-kotlin = "1.9.24"
+kotlin = "2.0.20"
 coreKtx = "1.13.1"
 appcompat = "1.7.0"
-material = "1.13.0-alpha05"
+material = "1.12.0"
 activity = "1.9.2"
 fragment = "1.8.3"
 transition = "1.5.1"
